# alpm.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
alpm/: Cargo.toml  README.md  build.rs
alpm-sys/: Cargo.toml  bindgen  build.rs
alpm-sys-fork/: Cargo.toml
alpm-sys-fork/src/: ffi.rs  lib.rs
alpm-sys/src/: ffi.rs  ffi_generated.rs  ffi_git.rs  lib.rs
alpm-utils/: Cargo.toml
alpm-utils/src/: alpm.rs  conf.rs  db.rs  depends.rs  lib.rs  target.rs
alpm/benches/: list.rs
alpm/examples/: callbacks.rs  database.rs  init.rs  list.rs  packages.rs  transaction.rs  vercmp.rs
alpm/src/: add.rs  alpm.rs  be_local.rs  be_pkg.rs  be_sync.rs  cb.rs  conflict.rs  db.rs  deps.rs  dload.rs  error.rs  filelist.rs  handle.rs  lib.rs  list.rs  list2.rs  list_mut.rs  list_with.rs  log.rs  macros.rs  mtree.rs  package.rs  remove.rs  sandbox.rs  signing.rs  sync.rs  trans.rs  types.rs  unions.rs  util.rs  utils.rs  version.rs
alpm/tests/: log  pacman-5.1.3-1-incomplete.pkg.tar.xz  pacman-5.1.3-1-x86_64.pkg.tar.xz
alpm/tests/db/local/acl-2.2.53-1/: desc  files  mtree
alpm/tests/db/local/archlinux-keyring-20190123-2/: desc  files  mtree
alpm/tests/db/local/argon2-20171227-3/: desc  files  mtree
alpm/tests/db/local/attr-2.4.48-1/: desc  files  mtree
alpm/tests/db/local/audit-2.8.4-3/: desc  files  mtree
alpm/tests/db/local/autoconf-2.69-5/: desc  mtree
alpm/tests/db/local/automake-1.16.1-1/: desc  files  mtree
alpm/tests/db/local/bash-5.0.002-1/: desc  files  mtree
alpm/tests/db/local/binutils-2.31.1-4/: desc  files  mtree
alpm/tests/db/local/bison-3.3.2-1/: desc  files  mtree
alpm/tests/db/local/bzip2-1.0.6-8/: desc  files  mtree
alpm/tests/db/local/ca-certificates-20181109-1/: desc  mtree
alpm/tests/db/local/ca-certificates-mozilla-3.43-1/: desc  files  mtree
alpm/tests/db/local/ca-certificates-utils-20181109-1/: desc  files  mtree
alpm/tests/db/local/coreutils-8.31-1/: desc  files  mtree
alpm/tests/db/local/cracklib-2.9.7-1/: desc  files  mtree
alpm/tests/db/local/cryptsetup-2.1.0-1/: desc  files  mtree
alpm/tests/db/local/curl-7.64.1-1/: desc  files  mtree
alpm/tests/db/local/db-5.3.28-4/: desc  files  mtree
alpm/tests/db/local/dbus-1.12.12-1/: desc  files  mtree
alpm/tests/db/local/desktop-file-utils-0.23+4+g92af410-1/: desc  files  mtree
alpm/tests/db/local/device-mapper-2.02.183-2/: desc  files  mtree
alpm/tests/db/local/diffutils-3.7-1/: desc  files  mtree
alpm/tests/db/local/e2fsprogs-1.45.0-1/: desc  files  mtree
alpm/tests/db/local/expac-git-8.1.g5ae006f-1/: desc  files  mtree
alpm/tests/db/local/expat-2.2.6-1/: desc  files  mtree
alpm/tests/db/local/fakeroot-1.23-1/: desc  files  mtree
alpm/tests/db/local/file-5.36-1/: desc  mtree
alpm/tests/db/local/filesystem-2019.05-2/: desc  files  mtree
alpm/tests/db/local/findutils-4.6.0-4/: desc  files  mtree
alpm/tests/db/local/flex-2.6.4-2/: desc  files  mtree
alpm/tests/db/local/gawk-4.2.1-2/: desc  files  mtree
alpm/tests/db/local/gc-7.6.8-1/: desc  files  mtree
alpm/tests/db/local/gcc-8.2.1+20181127-1/: desc  files  mtree
alpm/tests/db/local/gcc-libs-8.2.1+20181127-1/: desc  files  mtree
alpm/tests/db/local/gdbm-1.18.1-2/: desc  files  mtree
alpm/tests/db/local/gettext-0.19.8.1-3/: desc  files  mtree
alpm/tests/db/local/glib2-2.60.0-1/: desc  files  mtree
alpm/tests/db/local/glibc-2.28-5/: desc  files  mtree
alpm/tests/db/local/gmp-6.1.2-2/: desc  files  mtree
alpm/tests/db/local/gnupg-2.2.15-1/: desc  files  mtree
alpm/tests/db/local/gnutls-3.6.6-3/: desc  files  mtree
alpm/tests/db/local/gpgme-1.13.0-1/: desc  files  mtree
alpm/tests/db/local/grep-3.3-1/: desc  files  mtree
alpm/tests/db/local/groff-1.22.4-1/: desc  files  mtree
alpm/tests/db/local/guile-2.2.4-2/: desc  files  mtree
alpm/tests/db/local/gzip-1.10-1/: desc  files  mtree
alpm/tests/db/local/hwids-20190316-1/: desc  files  mtree
alpm/tests/db/local/iana-etc-20190228-1/: desc  files  mtree
alpm/tests/db/local/icu-63.1-2/: desc  files  mtree
alpm/tests/db/local/iptables-1:1.8.2-1/: desc  files  mtree
alpm/tests/db/local/json-c-0.13.1-2/: desc  files  mtree
alpm/tests/db/local/kbd-2.0.4-2/: desc  files  mtree
alpm/tests/db/local/keyutils-1.6-1/: desc  files  mtree
alpm/tests/db/local/kmod-26-2/: desc  files  mtree
alpm/tests/db/local/krb5-1.16.1-1/: desc  files  mtree
alpm/tests/db/local/less-530-1/: desc  files  mtree
alpm/tests/db/local/libarchive-3.3.3-1/: desc  files  mtree
alpm/tests/db/local/libassuan-2.5.3-1/: desc  files  mtree
alpm/tests/db/local/libatomic_ops-7.6.10-1/: desc  files  mtree
alpm/tests/db/local/libcap-2.26-1/: desc  files  mtree
alpm/tests/db/local/libcap-ng-0.7.9-1/: desc  files  mtree
alpm/tests/db/local/libcroco-0.6.12+4+g9ad7287-2/: desc  files  mtree
alpm/tests/db/local/libelf-0.176-1/: desc  files  mtree
alpm/tests/db/local/libffi-3.2.1-3/: desc  files  mtree
alpm/tests/db/local/libgcrypt-1.8.4-1/: desc  files  mtree
alpm/tests/db/local/libgpg-error-1.36-1/: desc  files  mtree
alpm/tests/db/local/libidn2-2.1.1-2/: desc  files  mtree
alpm/tests/db/local/libksba-1.3.5-1/: desc  files  mtree
alpm/tests/db/local/libldap-2.4.47-1/: desc  files  mtree
alpm/tests/db/local/libmnl-1.0.4-2/: desc  files  mtree
alpm/tests/db/local/libmpc-1.1.0-1/: desc  files  mtree
alpm/tests/db/local/libnetfilter_conntrack-1.0.7-1/: desc  files  mtree
alpm/tests/db/local/libnfnetlink-1.0.1-3/: desc  files  mtree
alpm/tests/db/local/libnftnl-1.1.1-1/: desc  files  mtree
alpm/tests/db/local/libnghttp2-1.36.0-1/: desc  files  mtree
alpm/tests/db/local/libnl-3.4.0-1/: desc  files  mtree
alpm/tests/db/local/libpcap-1.9.0-1/: desc  files  mtree
alpm/tests/db/local/libpsl-0.20.2-5/: desc  files  mtree
alpm/tests/db/local/libsasl-2.1.27-1/: desc  files  mtree
alpm/tests/db/local/libseccomp-2.4.0-1/: desc  files  mtree
alpm/tests/db/local/libsecret-0.18.8-2/: desc  files  mtree
alpm/tests/db/sync/: community-testing.db  core.db  extra.db  multilib-testing.db  multilib.db  testing.db
(+163 files in other folders)
