[workspace]
members = [ "alpm-sys", "alpm", "alpm-utils" ]
resolver = "2"

[workspace.package]
readme = "README.md"
authors = ["morganamilo <morganamilo@archlinux.org>"]
edition = "2024"
homepage = "https://github.com/archlinux/alpm.rs"
repository = "https://github.com/archlinux/alpm.rs"
license = "GPL-3.0"
keywords = ["archlinux", "arch", "alpm", "pacman", "bindings"]
