[package]
name = "alpm-sys"
version = "2.1.3"
readme = "../README.md"
authors = ["morganamilo <morganamilo@gmail.com>"]

description = "Raw bindings for libalpm"
homepage = "https://github.com/archlinux/alpm.rs"
repository = "https://github.com/archlinux/alpm.rs"
documentation = "https://docs.rs/alpm_sys"
license = "GPL-3.0"
keywords = ["archlinux", "arch", "alpm", "pacman"]
categories = ["external-ffi-bindings"]

[features]
git = []
static = []
generate = ["bindgen"]
docs-rs = []

[build-dependencies]
bindgen = { version = "0.69.4", optional = true, default-features = false, features = ["runtime"] }
pkg-config = "0.3.29"

[package.metadata.docs.rs]
features = [ "docs-rs" ]
