[package]
name = "alpm-sys"
version = "4.0.3"
description = "Raw bindings for libalpm"
documentation = "https://docs.rs/alpm_sys"

authors.workspace = true
readme.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true


[features]
git = []
static = []
generate = ["bindgen"]
docs-rs = []

[build-dependencies]
bindgen = { version = "0.70.0", optional = true, default-features = false, features = ["runtime"] }
pkg-config = "0.3.31"

[package.metadata.docs.rs]
features = [ "docs-rs" ]
