[package]
name = "alpm-sys"
version = "4.0.3"
description = "Raw bindings for libalpm"
documentation = "https://docs.rs/alpm_sys"

authors.workspace = true
readme.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true


[features]
git = []
pkg-config = ["dep:pkg-config"]
static = []
generate = ["dep:bindgen"]
docs-rs = []
default= ["pkg-config"]

[build-dependencies]
bindgen = { version = "0.72.1", optional = true, default-features = false, features = ["runtime"] }
pkg-config = { version = "0.3.32", optional = true }

[package.metadata.docs.rs]
features = [ "docs-rs" ]
