[package]
name = "alpm-utils"
version = "2.0.0"
authors = ["morganamilo <morganamilo@gmail.com>"]
edition = "2018"

description = "Helper functions for working with alpm"
homepage = "https://github.com/archlinux/alpm.rs"
repository = "https://github.com/archlinux/alpm.rs"
documentation = "https://docs.rs/alpm-utils"
license = "GPL-3.0"
keywords = ["archlinux", "arch", "alpm", "pacman"]

[package.metadata.docs.rs]
features = ["docs-rs", "pacmanconf"]

[features]
git = ["alpm/git"]
generate = ["alpm/generate"]
static = ["alpm/static"]
default = ["alpm", "conf"]
conf = ["pacmanconf", "alpm"]
docs-rs = ["alpm/docs-rs"]

[dependencies]
alpm = { version = "2.1.2", path = "../alpm", optional = true }
pacmanconf = { version = "2.0.0", optional = true }
