[package]
name = "alpm-utils"
version = "4.0.1"
description = "Helper functions for working with alpm"
documentation = "https://docs.rs/alpm-utils"

authors.workspace = true
readme.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
features = ["docs-rs", "pacmanconf"]

[features]
git = ["alpm/git"]
generate = ["alpm/generate"]
static = ["alpm/static"]
default = ["alpm", "conf"]
conf = ["pacmanconf", "alpm"]
docs-rs = ["alpm/docs-rs"]

[dependencies]
alpm = { version = "4.0.0", path = "../alpm", optional = true }
pacmanconf = { version = "3.0.0", optional = true }
