[package]
name = "alpm"
version = "2.2.2"
description = "Rust bindings for libalpm"
documentation = "https://docs.rs/alpm"
categories = ["api-bindings"]
exclude = ["tests"]

authors.workspace = true
readme.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
no-default-features = true
features = [ "docs-rs" ]

[features]
default = ["checkver"]
mtree = ["libarchive", "libarchive3-sys"]
git = ["alpm-sys/git"]
static = ["alpm-sys/static"]
generate = ["alpm-sys/generate"]
checkver = []
docs-rs = ["alpm-sys/docs-rs"]

[dependencies]
bitflags = "2.3.3"
libarchive = { version = "0.1.1", optional = true }
libarchive3-sys = { version = "0.1.2", optional = true }
alpm-sys = { path = "../alpm-sys", version = "2.1.0" }

[build-dependencies]
alpm-sys = { path = "../alpm-sys", version = "2.1.2" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "list"
harness = false
